adding necessary files for the operation

--- a/.github/workflows/generate_counter.yml
+++ b/.github/workflows/generate_counter.yml
@@ -3,7 +3,7 @@ name: Generate Counter File
 on:
   push:
     branches:
-      - main # Change this to the branch you want to trigger the workflow on
+      - main
 
 jobs:
   generate_counter:
@@ -22,4 +22,5 @@ jobs:
           git config --local user.name "GitHub Action"
           git add counter.txt
           git commit -m "Increment counter"
-          git push
+          git remote add origin_with_token "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+          git push origin_with_token
